<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout_Item"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bgcolor"
    android:paddingBottom="5dip" >

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgcolor"
        android:gravity="center_horizontal|center_vertical"
        android:padding="@dimen/padding_medium"
        android:shadowColor="#000000"
        android:text="@string/_register_title"
        android:textColor="@color/titlecolor"
        android:textSize="@dimen/text_size_large"
        tools:context=".IRoundUActivity" />
    
    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/padding_left"
        android:layout_marginTop="@dimen/align_top"
        android:background="@drawable/back"
        android:text="@string/_back"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/etcolor" >
    </Button>
    
    <Button
        android:id="@+id/splite_line"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/splite_line"
        android:layout_below="@+id/title_textview"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/logo_padding_bottom"
        android:background="@drawable/line" >
    </Button>

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:layout_below="@id/splite_line"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/logo_padding_bottom"
        android:contentDescription="@string/app_name"
        android:src="@drawable/photo" >
    </ImageView>

    <LinearLayout
        android:id="@+id/manorwoman"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_image"
        android:layout_marginLeft="@dimen/padding_left"
        android:layout_marginRight="@dimen/padding_right"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/man_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/padding_zero"
            android:layout_marginRight="@dimen/padding_zero"
            android:layout_weight="1"
            android:background="@drawable/left_after"
            android:drawableRight="@drawable/sex_logo_boy"
            android:paddingLeft="@dimen/padding_sep"
            android:paddingRight="@dimen/padding_sep"
            android:text="@string/sex_m"
            android:textColor="@color/etcolor"
            android:textSize="@dimen/text_size_small" >
        </Button>

        <Button
            android:id="@+id/woman_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/padding_zero"
            android:layout_marginRight="@dimen/padding_zero"
            android:layout_weight="1"
            android:background="@drawable/right_before"
            android:drawableRight="@drawable/sex_logo_girl"
            android:paddingLeft="@dimen/padding_sep"
            android:paddingRight="@dimen/padding_sep"
            android:text="@string/sex_w"
            android:textColor="@color/etcolor"
            android:textSize="@dimen/text_size_small" >
        </Button>
    </LinearLayout>

    <Button
        android:id="@+id/notice_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/manorwoman"
        android:layout_marginBottom="@dimen/padding_right"
        android:layout_marginRight="@dimen/padding_right"
        android:layout_marginTop="@dimen/padding_top"
        android:background="@color/bgcolor"
        android:text="@string/_notice"
        android:textColor="@color/etcolor"
        android:textSize="@dimen/text_size_small" >
    </Button>

    <EditText
        android:id="@+id/id_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notice_button"
        android:layout_marginBottom="@dimen/padding_zero"
        android:layout_marginLeft="@dimen/padding_left"
        android:layout_marginRight="@dimen/padding_right"
        android:background="@drawable/username"
        android:hint="@string/_register_id"
        android:paddingLeft="@dimen/padding_sep"
        android:textColor="@color/etcolor"
        android:textColorHint="@color/etcolor"
        android:textSize="@dimen/text_size_etmedium" >
    </EditText>

    <EditText
        android:id="@+id/pwd_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/logo_padding_bottom"
        android:layout_marginLeft="@dimen/padding_left"
        android:layout_marginRight="@dimen/padding_right"
        android:background="@drawable/pwd"
        android:hint="@string/_pwd"
        android:paddingLeft="@dimen/padding_sep"
        android:textColor="@color/etcolor"
        android:textColorHint="@color/etcolor"
        android:textSize="@dimen/text_size_etmedium" >
    </EditText>
    
    <Button
        android:id="@+id/show_hide_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_edit"
        android:layout_alignParentRight="true"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="3dp"
        android:text="@string/_showpwd"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/etcolor" >
    </Button>

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pwd_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/logo_padding_bottom"
        android:layout_marginLeft="@dimen/padding_left"
        android:layout_marginRight="@dimen/padding_right"
        android:background="@drawable/email"
        android:hint="@string/_email"
        android:paddingLeft="@dimen/padding_sep"
        android:textColor="@color/etcolor"
        android:textColorHint="@color/etcolor"
        android:textSize="@dimen/text_size_etmedium" >
    </EditText>

    <Button
        android:id="@+id/register_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/padding_left"
        android:layout_marginRight="@dimen/padding_right"
        android:background="@drawable/button_color"
        android:text="@string/_register"
        android:textColor="@color/btcolor"
        android:textSize="@dimen/text_size_large" >
    </Button>

</RelativeLayout>