<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" >
    
    <RelativeLayout android:id="@+id/setting_hide_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:background="#BBBBBB" >
    	
    	<TextView android:id="@+id/setting_hide_title_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dip"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:background="@drawable/back"
            android:textSize="18dp"
            android:textColor="#000000"
            android:text="@string/_back" />
	    
	    <TextView android:id="@+id/setting_hide_title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="15dip"
	        android:focusable="false"
	        android:textSize="20dp"
	        android:textColor="#000000"
	        android:text="@string/_setting_hide" />
        
    </RelativeLayout>

    <ScrollView android:id="@+id/setting_hide_content_scroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_hide_title"
        android:layout_margin="15dip" >
        
        <RelativeLayout android:id="@+id/setting_hide_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            
            <TextView android:id="@+id/setting_hide_content_everyone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18dp"
                android:text="@string/_setting_hide_everyone" />
            
            <TextView android:id="@+id/setting_hide_content_attention"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/setting_hide_content_everyone"
                android:layout_marginTop="10dip"
                android:background="@drawable/button_style"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18dp"
                android:text="@string/_setting_hide_attention" />
            
            <TextView android:id="@+id/setting_hide_content_hide"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/setting_hide_content_attention"
                android:layout_marginTop="10dip"
                android:background="@drawable/button_style"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18dp"
                android:text="@string/_setting_hide_hide" />
            
            <TextView android:id="@+id/setting_hide_content_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/setting_hide_content_hide"
                android:layout_marginTop="40dip"
                android:background="@drawable/button_style"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18dp"
                android:text="@string/_setting_hide_sure" />
            
        </RelativeLayout>
        
    </ScrollView>
    
</RelativeLayout>